--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "mysql": "^2.16.0",
     "node-fetch": "^2.3.0",
     "redis": "^2.8.0",
-    "sscjs": "0.0.8"
+    "dsteem": "^0.10.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
